# gcc-invariant-plugin

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: plugin.cpp
test/: test.cpp
